@startuml
class Customer {
    - name: String
    - invoices: Invoice[]
}

class Gardener {
    name :String
    buildingTasks: SoftProduct[]

}



class Product {
    - name: String
    - price: double
    - inStock : int
    - invoice: Invoice
}
note left: 2 Arten von Produkten. \n - SofProduct: Dabei wird eine Hilfe von einem Gärtner gebraucht.\n z.B.: bei einem speziellen Design. \n - HardProduct: Dabei wird keine Hilfe  gebraucht. \n z.B.: Ein Kunde kauft sich eine Pflanze

class SoftProduct extends Product {
    - helper: Gardener
}
class HardProduct extends Product
class Invoice {
     - customer: Customer
     - totalPrice: double
     - products: Product[]

}
class Gardener

Gardener "1" -- "*" SoftProduct
Invoice "1" -- "*" Product
Customer "1" -- "*" Invoice
@enduml
